<resources>
    <string name="app_name" translatable="false">WanderView</string>
    <string name="welcome_text">Welcome in WanderView world</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="new_user">Are you new? </string>
    <string name="sign_up">Sign up</string>
    <string name="old_user">You have account?</string>
    <string name="welcome_back_text">Welcome back in WanderView world</string>
    <string name="invalid_username">Username must have between 3 and 20 chars</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_data">Invalid email or password</string>
    <string name="email_send">Sent verification email</string>
    <string name="must_verify">You must verify email</string>
    <string name="logout">Log out</string>
    <string name="add_image">Add image</string>
    <string name="upload_image">Upload image</string>
    <string name="add_title">Add title</string>
    <string name="landscape_image">landscape image</string>
    <string name="user_picture">User profile picture</string>
    <string name="edit_profile">Edit profile</string>
    <string name="not_blank_username">Username cannot be blank</string>
    <string name="save">Save</string>
    <string name="user_option">User option</string>
    <string name="taken_email">Email is taken</string>
    <string name="taken_username">Username is taken</string>
    <string name="time_in_seconds" translatable="false">%1$ds</string>
    <string name="time_in_minutes" translatable="false">%1$dm</string>
    <string name="time_in_hours">%1$dh</string>
    <string name="time_in_days" translatable="false">%1$dd</string>
    <string name="delete_post">Delete post</string>
    <string name="likes">Likes</string>
    <string name="post_options">Post options</string>
    <string name="like">Like</string>
    <string name="no_posts">No posts</string>
    <string name="comments">Comments</string>
    <string name="upload_comment">Upload comment</string>
    <string name="add_comment">Add comment for</string>
    <string name="delete_comment">Delete comment</string>
    <string name="to_short_password">Password must have minimum 8 characters</string>
    <string name="no_user">There are no users with that username</string>

</resources>