<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/userProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/user_picture" />

    <TextView
        android:id="@+id/imageAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/userProfileImage"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/imageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/imageAuthor"
        android:layout_alignBaseline="@id/imageAuthor"
        android:textSize="16sp"
        android:alpha="0.7"/>

    <ImageView
        android:id="@+id/postOptions"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:src="@drawable/three_dots"
        android:visibility="invisible"
        android:contentDescription="@string/post_options"/>

    <TextView
        android:id="@+id/imageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageAuthor"
        android:layout_alignStart="@id/imageAuthor"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardImage"
        android:layout_alignStart="@id/cardImage"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="3dp"
        android:src="@drawable/heart_icon"
        android:contentDescription="@string/like"/>

    <TextView
        android:id="@+id/likeAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/likeButton"
        android:layout_toEndOf="@id/likeButton"
        android:textSize="25sp" />

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/cardImage"
       android:layout_below="@id/imageTitle"
       android:layout_marginEnd="15dp"
       android:layout_alignStart="@id/imageAuthor"
       android:layout_marginTop="15dp"
       app:cardCornerRadius="10dp">

       <ImageView
           android:id="@+id/imageView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:contentDescription="@string/landscape_image" />

   </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/likeAmmount"
        android:layout_marginTop="20dp"
        android:background="@color/colorSecondary" />

</RelativeLayout>