<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingImageActivity"
    android:layout_margin="20dp"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:id="@+id/addImage"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/addImage"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/add_image"
            android:background="@drawable/dashed_border" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            style="@style/FilledBox"
            android:hint="@string/add_title"
            android:layout_below="@id/imageView"
            android:layout_marginTop="20dp"
            android:id="@+id/imageTitle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialButton"
            android:text="@string/upload_image"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/imageTitle"
            android:layout_centerHorizontal="true"
            android:id="@+id/uploadImage"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>


</ScrollView>