<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentModel.CommentFragment"
    android:padding="15dp">

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/comments"/>

<!--    todo do zmiany jest ten editext-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/linear">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/userProfileImage"
            android:contentDescription="@string/user_picture"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/commentContentEditText"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:imeOptions="actionDone"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="odpowiedz na cos"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/addCommentBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/upload_icon"
            android:contentDescription="@string/upload_comment"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear"
        android:layout_below="@id/comments"
        android:layout_marginTop="5dp"/>

</RelativeLayout>